--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,8 @@
     "minimum-stability": "beta",
     "require": {
         "php": ">=8.0",
-        "monolog/monolog": "^3.9",
+        "monolog/monolog": "2.10.0",
         "ext-curl": "*",
-        "psr/log": "^2.0"
+        "psr/log": "^1.0.1 || ^2.0"
     }
 }
